@@ -24,7 +24,7 @@
  *        12 hours 30 minutes 1 second
  *        
  * Valid units of time:
- *        month, week, day, hour, minute, second
+ *        year, month, week, day, hour, minute, second
  *
  * Valid units of size:
  *        megabyte/mbyte/mb, kilobyte/kbyte/kb, byte
@@ -266,6 +266,25 @@ class {
 	number_per_ip = 10;
 	max_number = 100;
 	sendq = 1 mbyte;
+
+	/*
+	 * min_idle: minimum idle time that is shown in /whois
+	 */
+	min_idle = 3 hours;
+
+	/*
+	 * max_idle: maximum idle time that is shown in /whois
+	 */
+	max_idle = 8 hours;
+
+	/*
+	 * flags:
+	 *
+	 * random_idle          - idle time is randomly selected within the
+	 *                        range of min_idle to max_idle
+	 * hide_idle_from_opers - fake idle time will be shown to operators, too
+	 */
+	flags = random_idle, hide_idle_from_opers;
 };
 
 class {
