@@ -187,6 +187,7 @@ need_ident	{ return NEED_IDENT; }
 havent_read_conf { return HAVENT_READ_CONF; }
 hidden		{ return HIDDEN; }
 hidden_name	{ return HIDDEN_NAME; }
+hide_idle_from_opers { return HIDE_IDLE_FROM_OPERS; }
 hide_server_ips	{ return HIDE_SERVER_IPS; }
 hide_servers	{ return HIDE_SERVERS; }
 hide_spoof_ips	{ return HIDE_SPOOF_IPS; }
@@ -210,6 +211,8 @@ log		{ return T_LOG; }
 masked		{ return TMASKED; }
 max_clients     { return T_MAX_CLIENTS; }
 max_ident	{ return MAX_IDENT; }
+max_idle        { return MAX_IDLE; }
+min_idle        { return MIN_IDLE; }
 max_local	{ return MAX_LOCAL; }
 max_global	{ return MAX_GLOBAL; }
 max_nick_length { return MAX_NICK_LENGTH; }
@@ -244,6 +247,7 @@ port		{ return PORT; }
 quarantine	{ return RESV; }
 quiet_on_ban    { return QUIET_ON_BAN; }
 reason		{ return REASON; }
+random_idle     { return RANDOM_IDLE; }
 recvq           { return T_RECVQ; }
 redirport       { return REDIRPORT; }
 redirserv       { return REDIRSERV; }
@@ -349,6 +353,11 @@ softcallerid            { return T_SOFTCALLERID; }
 locops                  { return T_LOCOPS; }
 god                     { return T_GOD; }
 
+
+years                   { return YEARS; }
+year                    { return YEARS; }
+months                  { return MONTHS; }
+month                   { return MONTHS; }
 weeks			{ return WEEKS; }
 week			{ return WEEKS; }
 days			{ return DAYS; }
